...
            "state" : "translated",
            "value" : "С фильтром"
          }
        }
      }
    },
    "Filters" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filters"
          }
...
            "state" : "translated",
            "value" : "Виджет Экрана Блокировки"
          }
        }
      }
    },
    "Locked" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Locked"
          }
...
            "state" : "translated",
            "value" : "Ок"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
            "state" : "translated",
            "value" : "Поделиться PDF"
          }
        }
      }
    },
    "Show awards" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show awards"
          }
...
